fix some truncation issues

--- a/components/activity_and_insights/insights/insights_modal/insights_modal.scss
+++ b/components/activity_and_insights/insights/insights_modal/insights_modal.scss
@@ -87,6 +87,8 @@
                 }
 
                 .DataGrid_rows {
+                    background: transparent;
+
                     .DataGrid_row {
                         display: flex;
                         flex-direction: row;
